--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,13 +27,13 @@ frost-rerandomized = "2.0.0-rc.0"
 frostd = { path = "frostd" }
 futures = "0.3.31"
 futures-util = "0.3.31"
-halo2_gadgets = "0.3.0"
-halo2_proofs = "0.3.0"
+halo2_gadgets = "0.4.0"
+halo2_proofs = "0.3.2"
 hex = "0.4.3"
 itertools = "0.14.0"
 lazy_static = "1.5.0"
 message-io = "0.18"
-orchard = "0.10.1"
+orchard = "0.11.0"
 postcard = "1.1.1"
 rand = "0.8.5"
 rand_core = "0.6.4"
@@ -43,7 +43,7 @@ regex = "1.11.1"
 reqwest = { version = "0.12.12", default-features = false }
 rpassword = "7.3.1"
 rustls = "0.23.21"
-sapling-crypto = "0.4.0"
+sapling-crypto = "0.5.0"
 serde = "1.0.204"
 serde-hex = "0.1.0"
 serde_json = "1.0.138"
@@ -60,16 +60,17 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 uuid = "1.11.0"
 xeddsa = "1.0.2"
-zcash_address = "0.6.2"
-zcash_client_backend = "0.16.0"
-zcash_encoding = "0.2.2"
-zcash_keys = "0.6.0"
-zcash_primitives = "0.21.0"
-zcash_proofs = "0.21.0"
-zcash_protocol = "0.4.3"
+zcash_address = "0.10.1"
+zcash_client_backend = "0.21.0"
+zcash_encoding = "0.3.0"
+zcash_keys = "0.12.0"
+zcash_primitives = "0.26.1"
+zcash_proofs = "0.26.1"
+zcash_protocol = "0.7.1"
 zeroize = "1.8.1"
 
 [patch.crates-io]
 # TODO: remove this when https://github.com/zcash/orchard/issues/430 is fully
 # addressed and a new release is made
-orchard = { git = "https://github.com/conradoplg/orchard.git", rev = "f0c88b78a1d70d55ce6bb480566d132e57d5607b" }
+# orchard = { git = "https://github.com/conradoplg/orchard.git", rev = "f0c88b78a1d70d55ce6bb480566d132e57d5607b" }
+orchard = { path = "/home/conrado/zcash/orchard" }
